# Zonos2_TTS-ComfyUI

./: .gitignore  README.md  README_zh.md  TODO.md  __init__.py  install.py  loader.py  native.py  nodes.py  pyproject.toml  requirements.txt  runtime.py
example_workflows/: zonos2_tts_example_workflow.json
tests/: conftest.py  test_install.py  test_native.py  test_nodes.py  test_runtime_management.py
